--- a/src/body/body.sass
+++ b/src/body/body.sass
@@ -12,7 +12,8 @@
     grid-gap: 0.5rem
     // background-image: linear-gradient(to right ,#C28A47 ,#F2D282)
     border-radius: 5px
-    border: 1px solid #C28A47
+    border: 1px solid #dfdfdf
+    box-shadow: 0px 0px 10px #dfdfdf
     img
         max-width: 100%
     .sale
@@ -25,6 +26,6 @@
     margin-left: 50% !important
     transform: translate(-50%) !important
     color: #252525 !important
-@media screen and (max-width:768px) 
+@media screen and (max-width:768px)
     .data-grid-container
         width: 95%
