--- a/src/banner/banner.sass
+++ b/src/banner/banner.sass
@@ -1,7 +1,7 @@
 .banner
     position: relative
-    width:100%
-    height: 40vw
+    width: 100%
+    // height: 40vw
     background-color: #000
     display: flex
     justify-content: center
