--- a/src/body/body.sass
+++ b/src/body/body.sass
@@ -2,7 +2,7 @@
     position: relative
     margin-bottom: 20px
     display: grid
-    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr))
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr))
     grid-gap: 1.5rem
 .card
     padding: 10px
@@ -21,7 +21,6 @@
 .terms
     color: #6d6d6d
 .MuiInputLabel-animated
-    margin-top: 20px
     font-size: 1rem !important
     margin-left: 50% !important
     transform: translate(-50%) !important
